--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@example/blog",
+  "name": "@astroCloudflare/test",
   "type": "module",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "private": true,
   "scripts": {
     "dev": "astro dev",
@@ -13,7 +13,6 @@
   "dependencies": {
     "astro": "^1.6.0",
     "@astrojs/mdx": "^0.11.5",
-    "@astrojs/rss": "^1.0.3",
-    "@astrojs/sitemap": "^1.0.0"
+    "@astrojs/rss": "^1.0.3"
   }
 }
