--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^1.6.0",
+    "@astrojs/cloudflare": "^4.0.1",
     "@astrojs/mdx": "^0.11.5",
-    "@astrojs/rss": "^1.0.3"
+    "@astrojs/rss": "^1.0.3",
+    "astro": "^1.6.10"
   }
 }
