--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   },
   "dependencies": {
     "@astrojs/cloudflare": "^7.7.0",
-    "@astrojs/mdx": "^2.1.1",
-    "@astrojs/rss": "^4.0.1",
-    "astro": "^4.0.0"
+    "@astrojs/mdx": "^2.0.0",
+    "@astrojs/react": "^3.0.0",
+    "@astrojs/rss": "^3.0.0",
+    "astro": "^3.4.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
